# BeYou

./: .gitignore  README.md  copilot-instructions.md  render.yaml
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  reset_admin_password.py
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  phase36_hot_path_utils.py  test_admin_users_links.py  test_auth_privacy_portals.py  test_authorization_security.py  test_backend_scaffold.py  test_demo_seed.py  test_identity_contracts.py  test_identity_foundation_schema.py  test_phase11_operations_visibility.py  test_phase12_support_plan.py  test_phase13_mood_checkins.py  test_phase14_adult_support_summaries.py  test_phase15_metadata_closure.py  test_phase21_privacy_controls.py  test_phase22_notification_preferences.py  test_phase23_mood_note_shares.py  test_phase24_reason_access.py  test_phase25_admin_policy_operations.py  test_phase2_security_regression.py  test_phase31_school_pilot_operations.py  test_phase32_release_gates.py  test_phase33_performance_baseline.py  test_phase36_admin_hot_paths.py  test_phase36_adult_summary_hot_paths.py  test_phase36_adult_visibility_hot_paths.py  test_phase36_hot_path_utils.py  test_phase36_operations_schema_hot_paths.py  test_phase3_admin_content_seed.py  test_phase3_adult_summaries.py  test_phase3_domain_migration.py  test_phase3_security_regression.py  test_phase3_student_scenarios.py  test_phase3_student_self_checks.py  test_phase4_sos_backend.py  test_phase5_chatbot_backend.py  test_phase6_admin_reports.py  test_phase73_release_gates.py  (+4 more)
(+1038 files in other folders)
